frontend/scss/molecules/_m-listing.scss
/* ... */
.m-listing__meta .f-display-1 {
  @include tucked-margin-top($f-display-1, ('xsmall': 36, 'small+': 40, 'medium+': 44));
}

.m-listing__meta .f-module-title-2 {
  @include tucked-margin-top($f-module-title-2, ('xsmall': 24, 'small+': 32));
}

.m-listing__meta .f-subheading-1 {
  @include tucked-margin-top($f-subheading-1, ('xsmall': 28));
}

.m-listing__meta .f-body {
  @include tucked-margin-top($f-body, ('xsmall': 48));
}

.m-listing__meta .f-list-3 + .f-body {
  @include tucked-margin-top($f-body, ('xsmall': 36, 'small+': 44, 'medium+': 48));
}

.m-listing__meta .f-list-4 + br + .f-body {
  @include tucked-margin-top($f-body, ('xsmall': 36));
}

.m-listing__meta .subtitle.f-body {
  @include tucked-margin-top($f-body, ('xsmall': 28));
}

.m-listing__meta .f-secondary {
  @include tucked-margin-top($f-secondary, ('xsmall': 36));
}
  .m-listing__meta .f-list-1 + br + .f-secondary:not(ul),
  .m-listing__meta .f-list-2 + br + .f-secondary:not(ul),
  .m-listing__meta .f-list-6 + br + .f-secondary:not(ul),
  .m-listing__meta .f-list-7 + br + .f-secondary:not(ul) {
    @include tucked-margin-top($f-secondary, ('xsmall': 28));
  }
  .m-listing__meta .m-listing__meta-bottom .f-secondary {
    @include tucked-margin-top($f-secondary, ('xsmall': 40));
  }
  .m-listing__meta .f-list-4 + br + .m-listing__meta-bottom .f-secondary {
    @include tucked-margin-top($f-secondary, ('xsmall': 60, 'small+': 40));
  }
  .m-listing__meta span.f-secondary.last-child,
  .m-listing__meta ul.f-secondary:last-child {
    padding-bottom: 20px;

    @include breakpoint('small+') {
      padding-bottom: 8px;
    }
  }

.m-listing__meta .f-tertiary {
  @include tucked-margin-top($f-tertiary, ('xsmall': 36, 'small+': 36));
}
  .m-listing__meta .f-list-1 + br + .f-tertiary,
  .m-listing__meta .f-list-2 + br + .f-tertiary,
  .m-listing__meta .f-list-6 + br + .f-tertiary,
  .m-listing__meta .f-list-7 + br + .f-tertiary {
    @include tucked-margin-top($f-tertiary, ('xsmall': 20, 'small+': 28));

    @include breakpoint('xsmall') {
      padding-bottom: 4px;
      margin-bottom: -4px; // to not crop letters with descenders
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

.m-listing__meta .f-link {
  @include tucked-margin-top($f-secondary, ('xsmall': 28));
}

.m-listing__meta .f-caption {
  @include tucked-margin-top($f-caption, ('xsmall': 36));
}

.m-listing__meta .f-body-editorial {
  @include tucked-margin-top($f-body-editorial, ('xsmall': 40));
  color: $color__text;
}

.m-listing__meta .f-secondary + br + .f-secondary:not(ul):not(span):not(.date) {
  @include tucked-align-top($f-secondary);
  color: $color__text--tertiary;
}

.m-listing__meta .f-tertiary + br + .f-tertiary {
  @include tucked-align-top($f-tertiary);
  color: $color__text--tertiary;
}

.m-listing__meta .f-list-3 + br + .f-link,
.m-listing__meta .f-secondary + br + .f-link,
.m-listing__meta .f-tertiary + br + .f-link {
  @include tucked-margin-top($f-secondary, ('xsmall': 36));
}


@each $name, $point in $breakpoints {
  @if ($name != 'xsmall') {
    @include breakpoint('#{$name}') {
      .m-listing--row .m-listing__meta .f-headline-editorial:first-child {
        @include tucked-align-top($f-headline-editorial, $name);
      }

      .m-listing--row .m-listing__meta .f-list-1:first-child {
        @include tucked-align-top($f-list-1, $name);
      }

      .m-listing--row .m-listing__meta .f-list-2:first-child {
        @include tucked-align-top($f-list-2, $name);
      }

      .m-listing--row .m-listing__meta .f-list-3:first-child {
        @include tucked-align-top($f-list-3, $name);
      }

      .m-listing--row .m-listing__meta .f-list-4:first-child {
        @include tucked-align-top($f-list-4, $name);
      }

      .m-listing--row .m-listing__meta .f-list-5:first-child {
        @include tucked-align-top($f-list-5, $name);
      }

      .m-listing--row .m-listing__meta .f-list-6:first-child {
        @include tucked-align-top($f-list-6, $name);
      }

      .m-listing--row .m-listing__meta .f-list-7:first-child {
        @include tucked-align-top($f-list-7, $name);
      }

      .m-listing--row .m-listing__meta .f-headline-editorial:first-child {
        @include tucked-align-top($f-headline-editorial, $name);
      }

      .m-listing--row .m-listing__meta .f-tag:first-child {
        @include tucked-align-top($f-tag, $name);
      }
    }
  }
}


// variant `m-listing--feature`

@include breakpoint('medium+') {
  .m-listing--feature .m-listing__link {
    display: block;
    position: relative;
    height: auto;
  }

  .m-listing--feature .m-listing__img {
    display: block;
    position: relative;
    max-height: 95vh;
    overflow: hidden;
  }

  .m-listing--feature .m-listing__img.m-listing__img--w-overflow {
    overflow: visible;
  }

  .m-listing--feature .m-listing__img::before {
    padding-bottom: percentage(9 / 16); // 16:9
  }

  .m-listing--feature .m-listing__img::after {
    content: none;
    display: none;
  }

  .m-listing--feature .m-listing__meta {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    min-height: 0;
    padding: 20px;
    background-color: rgba(0,0,0,.25);
    pointer-events: none;
  }

  .m-listing--feature .m-listing__link:hover .m-listing__meta {
    background-color: rgba(0,0,0,.3);
  }

  .m-listing--feature .m-listing__meta > *,
  .m-listing--feature .type,
  .m-listing--feature .title,
  .m-listing--feature .date,
  .m-listing--feature .subtitle,
  .m-listing--feature .f-secondary + br + .f-secondary,
  .m-listing--feature .f-tertiary + br + .f-tertiary {
    color: $color__text--title-contrast;
  }

  .m-listing--feature .intro.f-caption,
  .m-listing--feature .short-description.f-secondary,
  .m-listing--feature .short-description.f-tertiary {
    display: none;
  }

  .m-listing--feature .m-listing__link:hover .title {
    color: $color__text--title-contrast;
    opacity: 1;
  }
}
/* ... */

